<resources>
    <string name="app_name">FinalProject</string>
    <string name="save_this_conversion">Save conversion</string>
    <string name="show_saved_query">Show previous saved conversions</string>
    <string name="instructions">Application Instructions</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="enter_amount">Enter the Amount:</string>
    <string name="welcome">Welcome to Currency Converter</string>
    <string name="end_currency">Conversion Currency</string>
    <string name="end_amount">Converted Amount</string>
    <string name="enter_currency">Enter Starting Currency</string>
    <string name="instruction_text">"Instructions on Currency Conversion:\n\n"
                    "1. Enter the amount and currency it is in to the preferred currency.\n"
                    "2. Click the "Convert" button to get the new amount in the new currency.\n"
                    "3. The conversion will be saved by clicking the three dots located at the top right.\n"
                    "4. You can view previous saved conversions if need be.\n"
                    </string>
</resources>